--- a/.github/workflows/trigger_bru.yml
+++ b/.github/workflows/trigger_bru.yml
@@ -14,7 +14,7 @@ on:
 jobs:
     BRU_dispatch:
       runs-on: ubuntu-latest
-      steps: 
+      steps:
       - id: file_changes
         uses: trilom/file-changes-action@v1.2.3
       - name: Files Changed
@@ -32,11 +32,11 @@ jobs:
           model_name_list=""
           iter_model_list=0
           for i in "${parsed_list[@]}"
-          do 
-            if [ $(echo $i | awk '/iCubGazeboV') ]
+          do
+            if [ $(echo $i | awk '/iCubGazeboV/') ]
             then
               if [ $iter_model_list == 0 ]
-              then 
+              then
                 model_name_list="$i"
                 iter_model_list=$(($iter_model_list+1))
               else
@@ -48,7 +48,7 @@ jobs:
           model_name_list=$(echo ${model_name_list::-1})
           echo "::set-output name=models::${models_name_list[@]}"
 
-          
+
 
       - name: Repository dispatch to blender-robotics-utils
         uses: peter-evans/repository-dispatch@v1
