--- a/.github/workflows/trigger_bru.yml
+++ b/.github/workflows/trigger_bru.yml
@@ -35,6 +35,7 @@ jobs:
           do
             if [ $(echo $i | awk '/iCubGazeboV/') ]
             then
+              echo $i
               if [ $iter_model_list == 0 ]
               then
                 model_name_list="$i"
@@ -44,6 +45,7 @@ jobs:
               fi
             fi
           done
+          echo ${model_name_list[@]}
           model_name_list=$(echo "${model_name_list[@]}" | tr ' ' '\n' | sort -u | tr '\n' ' ')
           model_name_list=$(echo ${model_name_list::-1})
           echo "::set-output name=models::${models_name_list[@]}"
