--- a/.github/workflows/trigger_bru.yml
+++ b/.github/workflows/trigger_bru.yml
@@ -35,16 +35,17 @@ jobs:
           do
             if [ $(echo $i | awk '/iCubGazeboV/') ]
             then
+              model_name=$(echo $i | tr -d '"')
+              echo $model_name
               if [ $iter_model_list == 0 ]
               then
-                model_name_list="$i"
+                model_name_list="$model_name"
                 iter_model_list=$(($iter_model_list+1))
               else
-                model_name_list="$model_name_list $i"
+                model_name_list="$model_name_list $model_name"
               fi
             fi
           done
-
           echo "::set-output name=models::${model_name_list[@]}"
 
 
