--- a/.github/workflows/trigger_bru.yml
+++ b/.github/workflows/trigger_bru.yml
@@ -48,12 +48,21 @@ jobs:
           done
           echo "::set-output name=models::${model_name_list[@]}"
 
-
+      - name: Get Token
+        id: get_workflow_token
+        uses: tibdex/github-app-token@v1
+        with:
+          private_key: ${{ secrets.ICUB_TECH_CODE_APP_KEY }}
+          app_id: ${{ secrets.ICUB_TECH_CODE_APP_ID }}
+          repository: Nicogene/blender-robotics-utils
 
       - name: Repository dispatch to blender-robotics-utils
         uses: peter-evans/repository-dispatch@v1
+        if:  steps.set_model_list.outputs.models != ''
+        env:
+          GITHUB_APPS_TOKEN: ${{ steps.get_workflow_token.outputs.token }}
         with:
-          token: ${{ secrets.ICUB_MODELS_TOKEN }}
+          token: ${{ env.GITHUB_APPS_TOKEN }}
           repository: Nicogene/blender-robotics-utils
           event-type: repository_trigger
           client-payload: '{"type": "repository_trigger", "models_list": "${{ steps.set_model_list.outputs.models }}"}'
